# Wowpaper

./: .gitignore  CMakeLists.txt  COMMERCIAL_LICENSE.md  COMMERCIAL_LICENSE.txt  README-CN.md  README.md  config-cn.toml  config.toml
.github/workflows/: site.yml
basic/: CMakeLists.txt  cli.hpp  common.cpp  common.h  ipc.cpp  ipc.h  log.hpp  version.inc.in
client/: CMakeLists.txt  main.cpp
cmake/: AddProtocols.cmake
daemon/: CMakeLists.txt  main.cpp
daemon/include/: core.h  player.h  window.h
daemon/include/decode/: decoder.h  ffmpeg.h
daemon/include/render/: IndexBuffer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  error.h  renderer.h
daemon/include/resource/: resourcemanager.h  wallpaper.h
daemon/lib/: core.cpp  player.cpp
daemon/lib/decode/: decoder.cpp  ffmpeg.cpp
daemon/lib/render/: IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  error.cpp  renderer.cpp
daemon/lib/resource/: resourcemanager.cpp  wallpaper.cpp
daemon/lib/window/: egl.cpp  wayland.cpp  window.cpp
site/: go.mod  hugo.toml
site/assets/css/: custom.css
site/content/docs/: faq.md  faq.zh-cn.md  quickstart.md  quickstart.zh-cn.md
site/content/docs/dev/: _index.md  _index.zh-cn.md  build.md  build.zh-cn.md  build_and_install.md  build_and_install.zh-cn.md  design.md  design.zh-cn.md  test.md  test.zh-cn.md
site/content/docs/usr/: _index.md  _index.zh-cn.md  cmd.md  cmd.zh-cn.md  config.md  config.zh-cn.md  guides.md  template.md  template.zh-cn.md  user.zh-cn.md  work.zh-cn.md
site/i18n/: en.toml  zh-cn.toml
site/layouts/: baseof.html  home.html
site/layouts/partials/: footer.html  navbar-home.html  navbar-title.html
site/layouts/shortcodes/: cp-code.html  dino.html
test/: CMakeLists.txt  modify.sh  path.py.in  runtest.py
test/cases/: help.test  list.test  manual.test  next.test  previous.test  refresh.test  test.list  unique-instance.test  version.test
test/fixtures/config/: config.toml  config.toml.backup
